apps/element/chart/templates/matrix-rtc-auth.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-rtc-auth
  namespace: element
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: matrix-rtc-auth
  template:
    metadata:
      labels:
        app: matrix-rtc-auth
    spec:
      enableServiceLinks: false
      containers:
        - name: matrix-rtc-auth
          image: "ghcr.io/element-hq/lk-jwt-service:0.4.4@sha256:9c715697c6f7c1f538f2ee41b7b59b04a8d06bf790a7cc8c8517ccac8d28813d"
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: "1"
              memory: 256Mi
