apps/element/chart/templates/matrix-rtc-auth.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-rtc-auth
  namespace: element
spec:
  type: ClusterIP
  selector:
    app: matrix-rtc-auth
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
